--- a/debugging/change_background.html
+++ b/debugging/change_background.html
@@ -18,16 +18,12 @@
 </style>
 </head>
 <body>
-
 <h2>Click the button to change the background color</h2>
-
-<button id="colorButon">Change Color</button>
-
+<button id="colorButton">Change Color</button>
 <script>
     document.getElementById("colorButton").addEventListener("click", function() {
         changeBackgroundColor();
     });
-
     function changeBackgroundColor() {
         // Generate a random color
         var randomColor = "#" + Math.floor(Math.random()*16777215).toString(16);
@@ -35,6 +31,5 @@
         document.body.style.backgroundColor = randomColor;
     }
 </script>
-
 </body>
 </html>
